force-app/main/default/objects/Extended_Report_Period__c/Extended_Report_Period__c.object-meta.xml
<CustomObject>
    <description>Used to capture extended reporting period of Quote/Policy</description>
    <label>Extended Report Period</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extended Report Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>