force-app/main/default/objects/Extended_Report_Period__c/fields/Additional_Premium__c.field-meta.xml
<CustomField>
    <fullName>Additional_Premium__c</fullName>
    <inlineHelpText>Additional premium percentage of an extended reporting period</inlineHelpText>
    <label>Additional Premium</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>