force-app/main/default/objects/Extended_Report_Period__c/fields/Extended_Report_Period__c.field-meta.xml
<CustomField>
    <fullName>Extended_Report_Period__c</fullName>
    <inlineHelpText>What is the period of extended reporting ?</inlineHelpText>
    <label>Extended Report Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>