force-app/main/default/objects/Extended_Report_Period__c/fields/Extended_Reporting_Period_Category__c.field-meta.xml
<CustomField>
    <fullName>Extended_Reporting_Period_Category__c</fullName>
    <inlineHelpText>Choose extended reporting period category</inlineHelpText>
    <label>Extended Reporting Period Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>