force-app/main/default/objects/Extended_Report_Period__c/fields/Index_Number__c.field-meta.xml
<CustomField>
    <fullName>Index_Number__c</fullName>
    <label>Index Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>