force-app/main/default/objects/Extended_Report_Period__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy of an extended reporting period.</inlineHelpText>
    <label>Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Extended Report Periods</relationshipLabel>
    <relationshipName>Extended_Report_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>