force-app/main/default/objects/Extended_Report_Period__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Lookup</description>
    <inlineHelpText>Associated Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Extended Report Periods</relationshipLabel>
    <relationshipName>Extended_Report_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>