force-app/main/default/objects/Extended_Report_Period__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Quote of an extended reporting period</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Extended Report Periods</relationshipLabel>
    <relationshipName>Extended_Report_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>