force-app/main/default/objects/Extended_Report_Period__c/recordTypes/Extended_Reporting_Period_of_Policy.recordType-meta.xml
<RecordType>
    <fullName>Extended_Reporting_Period_of_Policy</fullName>
    <active>true</active>
    <description>Extended Reporting Period of Policy</description>
    <label>Extended Reporting Period of Policy</label>
</RecordType>