force-app/main/default/objects/Extended_Report_Period__c/recordTypes/Extended_Reporting_Period_of_Product.recordType-meta.xml
<RecordType>
    <fullName>Extended_Reporting_Period_of_Product</fullName>
    <active>true</active>
    <description>Extended Reporting Period of Product</description>
    <label>Extended Reporting Period of Product</label>
</RecordType>