force-app/main/default/objects/Extended_Report_Period__c/recordTypes/Extended_Reporting_Period_of_Quote.recordType-meta.xml
<RecordType>
    <fullName>Extended_Reporting_Period_of_Quote</fullName>
    <active>true</active>
    <description>Extended Reporting Period of Quote</description>
    <label>Extended Reporting Period of Quote</label>
</RecordType>