force-app/main/default/objects/Extended_Report_Period__c/validationRules/Policy_ERP.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_ERP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Extended_Reporting_Period_of_Quote&quot;, 
Policy__r.RecordType.DeveloperName =&quot;Non_Program_Policy&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Extended Reporting Period of Quote from Policy</errorMessage>
</ValidationRule>