force-app/main/default/objects/Extended_Report_Period__c/validationRules/Quote_ERP.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_ERP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Extended_Reporting_Period_of_Policy&quot;, Quote__r.RecordType.DeveloperName ==&quot;Non_Program_Quote&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Extended Report Period of Policy from Quote</errorMessage>
</ValidationRule>