force-app/main/default/objects/Extended_Report_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Extended_Report_Period__c</columns>
    <columns>Additional_Premium__c</columns>
    <columns>Extended_Reporting_Period_Category__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>